some changes to update paths

--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+                "node_modules/primeng/resources/primeng.min.css",
+                "src/styles.scss"
             ],
             "scripts": []
           },
