--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,8 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/.htaccess"
             ],
             "styles": [
                 "node_modules/primeng/resources/primeng.min.css",
